--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,18 @@
 {
     "compilerOptions": {
-      "target": "es2017",
-      "module": "esnext",
+      "target": "ES2020",
+      "module": "ES2020",
       "moduleResolution": "node",
       "esModuleInterop": true,
       "outDir": "./dist",
-      "declaration": true,
       "allowJs": true,
+      "checkJs": true,
+      "declaration": true,
+      "declarationMap": false,
+      "allowSyntheticDefaultImports": true,
       "resolveJsonModule": true,
-      "lib": ["es2017", "dom"]
+      "lib": ["ES2020", "dom"]
     },
-    "include": ["lib/**/*.ts", "lib/**/*.mjs", "index.ts"]
+    "include": ["lib/**/*.ts", "lib/**/*.js"]
   }
   
