--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "@types/fs-extra": "^11.0.1",
+    "cosmiconfig": "^8.1.3",
     "fs-extra": "^11.1.1",
     "prettier": "^2.8.4"
   }
