--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "build": "npm run clean && npm run build:esm && npm run build:cjs",
     "build:esm": "tsc -p ./tsconfig.esm.json && mv dist/esm/index.js dist/esm/index.mjs",
     "build:cjs": "tsc -p ./tsconfig.cjs.json",
-    "prepack": "npm run build"
+    "prepack": "npm run build",
+    "build2": "tsup --minify --format cjs,esm",
+    "dev2": "tsup --minify --format cjs,esm --watch",
+    "generate2": "npm run clean:generated && node ./dist/generateData.js && prettier --write template/src/generated",
+    "delete-dir": "node ./dist/deleteDirectoryContents.js"
   },
   "keywords": [
     "vue",
@@ -22,6 +26,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^18.15.11",
+    "tsup": "^6.7.0",
     "typescript": "^5.0.3"
   },
   "exports": {
