--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "build": "tsup",
     "dev": "tsup --watch",
     "generate:data": "node ./dist/deleteGeneratedData.js && node ./dist/generateData.js",
-    "generate": "node ./dist/index.js && npm run generate:data"
+    "generate": "node ./dist/index.js && npm run generate:data",
+    "format": "npx prettier --write .",
+    "prepare": "husky install"
   },
   "keywords": [
     "vue",
@@ -36,6 +38,8 @@
   "devDependencies": {
     "@types/node": "^18.15.11",
     "@types/prettier": "^2.7.2",
+    "husky": "^8.0.0",
+    "pretty-quick": "^3.1.3",
     "tsup": "^6.7.0",
     "typescript": "^5.0.3"
   },
