--- a/template/.prettierrc.json
+++ b/template/.prettierrc.json
@@ -3,6 +3,8 @@
   "semi": true,
   "tabWidth": 2,
   "singleQuote": true,
-  "printWidth": 100,
-  "trailingComma": "none"
+  "printWidth": 120,
+  "trailingComma": "all",
+  "useTabs": false,
+  "bracketSpacing": true
 }
