--- a/package.json
+++ b/package.json
@@ -3,14 +3,12 @@
   "version": "1.0.0",
   "description": "Create your project's documentation in few simple steps.",
   "scripts": {
-    "dev": "node ./dist/cjs/index.js && npm run generate && cd docs && npm install",
-    "generate": "npm run clean:generated && node ./dist/cjs/lib/generate.js && prettier --write template/src/generated",
-    "clean": "rm -rf ./dist && mkdir -p dist",
-    "clean:generated": "rm -rf ./template/src/generated/*",
-    "build": "npm run clean && npm run build:esm && npm run build:cjs",
-    "build:esm": "tsc -p ./tsconfig.esm.json && mv dist/esm/index.js dist/esm/index.mjs",
-    "build:cjs": "tsc -p ./tsconfig.cjs.json",
-    "prepack": "npm run build"
+    "build": "tsup",
+    "dev": "tsup --watch",
+    "generate:data": "node ./dist/deleteGeneratedData.js && node ./dist/generateData.js",
+    "generate": "node ./dist/index.js && npm run generate:data",
+    "format": "npx prettier --write .",
+    "prepare": "husky install"
   },
   "keywords": [
     "vue",
@@ -20,30 +18,34 @@
   ],
   "author": "Willo0ow",
   "license": "MIT",
-  "devDependencies": {
-    "@types/node": "^18.15.11",
-    "typescript": "^5.0.3"
-  },
+  "main": "dist/index.js",
+  "module": "dist/index.js",
   "exports": {
     ".": {
-      "import": {
-        "types": "./dist/esm/types/index.d.ts",
-        "default": "./dist/esm/index.mjs"
-      },
-      "require": {
-        "types": "./dist/cjs/types/index.d.ts",
-        "default": "./dist/cjs/index.js"
-      }
-    }
+      "require": "./dist/index.js",
+      "import": "./dist/index.mjs"
+    },
+    "./package.json": "./package.json"
   },
   "types": "./dist/cjs/types/index.d.ts",
-  "main": "./dist/cjs/index.js",
   "files": [
-    "lib/**/*",
-    "index.ts"
+    "dist",
+    "lib",
+    "template",
+    "package.json",
+    "README.md"
   ],
+  "devDependencies": {
+    "@types/node": "^18.15.11",
+    "@types/prettier": "^2.7.2",
+    "husky": "^8.0.0",
+    "pretty-quick": "^3.1.3",
+    "tsup": "^6.7.0",
+    "typescript": "^5.0.3"
+  },
   "dependencies": {
     "@types/fs-extra": "^11.0.1",
+    "cosmiconfig": "^8.1.3",
     "fs-extra": "^11.1.1",
     "prettier": "^2.8.4"
   }
