--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,17 @@
 {
-    "compilerOptions": {
-      "target": "es2017",
-      "module": "esnext",
-      "moduleResolution": "node",
-      "esModuleInterop": true,
-      "outDir": "./dist",
-      "declaration": true,
-      "allowJs": true,
-      "resolveJsonModule": true,
-      "lib": ["es2017", "dom"]
-    },
-    "include": ["lib/**/*.ts", "lib/**/*.mjs", "index.ts"]
-  }
-  
+  "compilerOptions": {
+    "target": "ES2020",
+    "module": "node16",
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "outDir": "./dist",
+    "allowJs": true,
+    "checkJs": true,
+    "declaration": true,
+    "declarationMap": false,
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
+    "lib": ["ES2020", "dom"]
+  },
+  "include": ["lib/**/*.ts", "lib/**/*.js"]
+}
